--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node backend/index.ts",
+    "build": "rm -rf build && prettier --write src/ && tsc",
     "server": "nodemon backend/index.ts",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.23",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
