--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.23",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
