--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^10.14.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -37,6 +38,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.23",
+    "@types/stripe": "^8.0.417",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
