--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,7 +99,7 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }, "include": ["./**/*.ts"],
+  }, "include": ["./**/*.ts", "backend/routes/Stripe.js"],
     "files": ["global.d.ts"]
  
 }
