--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Roman Armin Rostock",
   "license": "ISC",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.13.0",
+    "@stripe/stripe-js": "^1.41.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "colors": "^1.4.0",
@@ -27,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "multer": "^1.4.5-lts.1",
+    "react-stripe-checkout": "^2.6.3",
     "stripe": "^10.14.0"
   },
   "devDependencies": {
