--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "rm -rf build && prettier --write src/ && tsc",
     "server": "nodemon backend/index.ts",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "admin": "npm start --prefix admin",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dashboard": "concurrently \"npm run server\" \"npm run admin\""
   },
   "keywords": [],
   "author": "Roman Armin Rostock",
@@ -16,6 +18,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.13.0",
     "@stripe/stripe-js": "^1.41.0",
+    "@types/styled-components": "^5.1.26",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "colors": "^1.4.0",
