--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "errorhandler": "^1.5.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
+    "random-token": "0.0.8",
     "react-stripe-checkout": "^2.6.3",
     "stripe": "^10.14.0"
   },
@@ -44,6 +47,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.23",
+    "@types/nodemailer": "^6.4.7",
     "@types/stripe": "^8.0.417",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
