--- a/package.json
+++ b/package.json
@@ -49,9 +49,13 @@
     "@types/node": "^18.7.23",
     "@types/nodemailer": "^6.4.7",
     "@types/stripe": "^8.0.417",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.20", 
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
+  },
+  "repository": {
+    "type":"git",
+    "url": "https://github.com/Roman-e-prog/webshop_ts_mern"
   }
 }
